--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,16 @@
     "compilerOptions": {
       "module": "ES6",
       "target": "ES5",
-      "lib": ["ES2020", "DOM"],
       "declaration": true,
       "outDir": "./dist/lib",
-      "moduleResolution": "node"
+      "moduleResolution": "node",
+      "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
+      "strict": true,
+      "skipLibCheck": true,
+      "removeComments": true,
+      "lib": ["ES2020", "DOM"],
+      "watch": true
     },
     "include": [
       "src/**/*"
