--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "scigrapher",
   "version": "0.0.1",
   "description": "",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "rm -rf dist/lib && tsc"
+    "build" : "rm -rf dist/lib && tsc",
+    "build-wn" : "rd /s dist\\lib && tsc"
   },
   "keywords": [
     "graph",
