--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
   "name": "scigrapher",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "Scientific oriented data visualization grapher",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "type": "module",
-  "files": [
-    "/lib"
-  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf lib && tsc",
-    "build-wn": "rd /s lib && tsc"
+    "build": "rm -rf dist/lib && tsc && tsc --build tsconfig.es5.json",
+    "build-wn": "rd /s dist\\lib && tsc && tsc --build tsconfig.es5.json"
   },
   "keywords": [
     "graph",
