--- a/tsconfig.es5.json
+++ b/tsconfig.es5.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
-      "module": "ES6",
+      "module": "CommonJS",
       "target": "ES5",
       "declaration": true,
-      "outDir": "./dist/lib/es6",
+      "outDir": "./dist/lib/es5",
       "moduleResolution": "node",
       "esModuleInterop": true,
       "forceConsistentCasingInFileNames": true,
